--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title> 
-    <link rel="stylesheet" href="./test03.css">
+    <link rel="stylesheet" href="HW02.css">
 </head>
 <body>
     <div id="root"></div>
+
+
+
+
 
     <script crossorigin src="https://unpkg.com/react@18/umd/react.development.js"></script>
     <script crossorigin src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
@@ -24,7 +28,7 @@
 
 
     
-    <script type="text/babel" src="./test03.js"></script>
+    <script type="text/babel" src="HW02.js"></script>
 
 </body>
 </html>
