--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title> 
-    <link rel="stylesheet" href="HW02.css">
+    <link rel="stylesheet" href="hw01.css">
 </head>
 <body>
     <div id="root"></div>
@@ -28,7 +28,7 @@
 
 
     
-    <script type="text/babel" src="HW02.js"></script>
+    <script type="text/babel" src="hw01.js"></script>
 
 </body>
 </html>
